# pelican-blog

./: .gitignore  Makefile  README.rst  develop_server.sh  input.css  pelicanconf.py  publishconf.py  pyproject.toml  tailwind.config.js
content/extra/: robots.txt
content/news/: blog.rst  heroku-buildpack-pelican.rst  i18n_subsites_released.rst  pelican-3.0.rst  pelican-3.1.1-py3k.rst  pelican-3.1.rst  pelican-3.2.rst  pelican-3.3.rst  pelican-3.4.rst  pelican-3.5.rst  pelican-3.6.rst  pelican-3.7.rst  pelican-4.0.rst  pelican-4.1.rst  pelican-4.5.rst  pelican-4.6.rst  pelican-4.7.rst  pelican-weekly-1.rst  sprint-2019-fall.rst
content/pages/: gratitude.rst  index.rst  not-found.rst
themes/getpelican/static/css/: fonts.css
themes/getpelican/templates/: article.html  article_infos.html  author.html  base.html  categories.html  category.html  homepage.html  index.html  page.html  pagination.html  tag.html  taglist.html  tags.html
themes/getpelican/templates/includes/: featured_article.html  footer.html  home_features.html  home_header.html  home_quickstart.html  home_sponsors.html  home_support.html  topbar.html
themes/notmyidea/static/css/: main.css
themes/notmyidea/templates/: base.html
